# cuBWA

./: .clang-format  .cmake-format  .gitmodules  LICENSE  Readme.md
src/: CMakeLists.txt  FMI_search.cpp  FMI_search.cu  FMI_search.h  main.cc
src/sample/: CMakeLists.txt  test_random_read.cu
src/smems/: CMakeLists.txt  FMI_search.cpp  FMI_search.cu  FMI_search.h  bwa.h  smem.cu  smem.h
src/smems/test/: CMakeLists.txt  test_occ4.cpp  test_occ4.cu
